# konkr-sdl2-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO
assets/map/: Desert Rush.ascii  Desert Rush.todo  Double Trouble.ascii  Double Trouble.todo  MapTest.ascii  Reckoning.ascii  Rising Sun.ascii  Rising Sun.todo  Ten Paces.ascii  Ten Paces.txt  Test.txt  Troublemaker.ascii  Unity.ascii  Unity.txt  Unwelcome guest.ascii  map1  map1.txt
assets/map/Base/: Base.ascii
doc/html/: _bandit_8cpp.html  _bandit_8hpp.html  _bandit_8hpp.js  _bandit_8hpp_source.html  _blit_target_8hpp.html  _blit_target_8hpp.js  _blit_target_8hpp_source.html  _button_8cpp.html  _button_8hpp.html  _button_8hpp.js  _button_8hpp_source.html  _camp_8cpp.html  _camp_8hpp.html  _camp_8hpp.js  _camp_8hpp_source.html  _castle_8cpp.html  _castle_8hpp.html  _castle_8hpp.js  _castle_8hpp_source.html  _cell_8cpp.html  _cell_8hpp.html  _cell_8hpp.js  _cell_8hpp_source.html  _checker_8hpp.html  _checker_8hpp.js  _checker_8hpp_source.html  _color_utils_8hpp.html  _color_utils_8hpp.js  _color_utils_8hpp_source.html  _cursor_8cpp.html  _cursor_8hpp.html  _cursor_8hpp.js  _cursor_8hpp_source.html  _displayer_8cpp.html  _displayer_8hpp.html  _displayer_8hpp.js  _displayer_8hpp_source.html  _fence_displayer_8cpp.html  _fence_displayer_8hpp.html  _fence_displayer_8hpp.js  (+364 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+60 more)
include/: BlitTarget.hpp  Button.hpp  CapitalDisplayer.hpp  Cell.hpp  Checker.hpp  ColorUtils.hpp  Cursor.hpp  Displayer.hpp  DrawUtils.hpp  FenceDisplayer.hpp  Font.hpp  Forest.hpp  Game.hpp  GameMap.hpp  GameMenu.hpp  GenericDisplayer.hpp  Ground.hpp  HexagonDisplayer.hpp  HexagonGrid.hpp  HexagonUtils.hpp  MainMenu.hpp  MapSelectMenu.hpp  MapsMenu.hpp  MenuBase.hpp  Overlay.hpp  Plain.hpp  PlayableGround.hpp  PlayableTerritory.hpp  Player.hpp  PlayerTerritory.hpp  Point.hpp  Rect.hpp  RenderTargetGuard.hpp  Sea.hpp  Size.hpp  Territory.hpp  Texture.hpp  TreasuryDisplayer.hpp  Water.hpp  Window.hpp
include/Cells/: Cell.hpp  Water.hpp
include/Cells/Grounds/: Forest.hpp  Ground.hpp  PlayableGround.hpp
include/Displayers/: Displayer.hpp  FenceDisplayer.hpp  GenericDisplayer.hpp  HexagonDisplayer.hpp  TreasuryDisplayer.hpp
include/GameElements/: Camp.hpp  Castle.hpp  GameElement.hpp  Player.hpp  Town.hpp
include/GameElements/Troops/: Bandit.hpp  Hero.hpp  Knight.hpp  Pikeman.hpp  Troop.hpp  Villager.hpp
include/Menus/: GameMenu.hpp  MainMenu.hpp  MakeMenu.hpp  MapsMenu.hpp  MenuBase.hpp
include/SDLWrappers/: Cursor.hpp  Font.hpp
include/SDLWrappers/Coords/: Point.hpp  Rect.hpp  Size.hpp
include/SDLWrappers/Renderers/: BlitTarget.hpp  RenderTargetGuard.hpp  Texture.hpp  Window.hpp
include/Utils/: Checker.hpp  ColorUtils.hpp  HexagonUtils.hpp
include/Widgets/: Button.hpp  GameMap.hpp  HexagonGrid.hpp  Overlay.hpp
include/logic/: Building.hpp  GameElement.hpp  Movable.hpp  Troop.hpp  TurnManager.hpp
include/logic/units/: Bandit.hpp  Camp.hpp  Castle.hpp  Hero.hpp  Knight.hpp  Pikeman.hpp  Town.hpp  Villager.hpp
lib/SDL2/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/SDL2/.brew/: sdl2.rb
lib/SDL2_gfx/: INSTALL_RECEIPT.json
lib/SDL2_image/: INSTALL_RECEIPT.json  sbom.spdx.json
lib_macos/SDL2_gfx/: sbom.spdx.json
lib_macos/SDL2_gfx/lib/: libSDL2_gfx-1.0.0.dylib
lib_macos/SDL2_image/.brew/: sdl2_image.rb
lib_macos/SDL2_image/lib/: libSDL2_image-2.0.0.dylib
lib_macos/SDL2_ttf/: INSTALL_RECEIPT.json  sbom.spdx.json
lib_macos/SDL2_ttf/.brew/: sdl2_ttf.rb
src/: Button.cpp  CapitalDisplayer.cpp  Cell.cpp  Cursor.cpp  Displayer.cpp  FenceDisplayer.cpp  Font.cpp  Forest.cpp  Game.cpp  GameMap.cpp  GameMenu.cpp  Ground.cpp  HexagonDisplayer.cpp  HexagonGrid.tpp  MainMenu.cpp  MapSelectMenu.cpp  MapsMenu.cpp  MenuBase.cpp  Overlay.cpp  Plain.cpp  PlayableGround.cpp  PlayableTerritory.cpp  Player.cpp  PlayerTerritory.cpp  Point.cpp  Sea.cpp  Size.cpp  Territory.cpp  Texture.cpp  TreasuryDisplayer.cpp  Water.cpp  Window.cpp  main.cpp
src/Cells/: Cell.cpp  Water.cpp
src/Cells/Grounds/: Forest.cpp  Ground.cpp  PlayableGround.cpp
src/Displayers/: Displayer.cpp  FenceDisplayer.cpp  HexagonDisplayer.cpp  TreasuryDisplayer.cpp
src/GameElements/: Camp.cpp  Castle.cpp  GameElement.cpp  Player.cpp  Town.cpp
src/GameElements/Troops/: Bandit.cpp  Hero.cpp  Knight.cpp  Pikeman.cpp  Troop.cpp  Villager.cpp
src/Menus/: GameMenu.cpp  MainMenu.cpp  MakeMenu.cpp  MapsMenu.cpp  MenuBase.cpp
src/SDLWrappers/: Cursor.cpp  Font.cpp
src/SDLWrappers/Coords/: Point.cpp  Rect.cpp  Size.cpp
src/SDLWrappers/Renderers/: RenderTargetGuard.cpp  Texture.cpp  Window.cpp
src/Widgets/: Button.cpp  GameMap.cpp  HexagonGrid.tpp  Overlay.cpp
src/logic/: GameElement.cpp  Troop.cpp  TurnManager.cpp
src/logic/units/: Bandit.cpp  Camp.cpp  Castle.cpp  Hero.cpp  Knight.cpp  Pikeman.cpp  Town.cpp  Villager.cpp
tests/cpp/: konkr  konkr.cpp
tests/cpp/konkr.dSYM/Contents/: Info.plist
tests/cpp/konkr.dSYM/Contents/Resources/DWARF/: konkr
tests/cpp/konkr.dSYM/Contents/Resources/Relocations/aarch64/: konkr.yml
tests/python/: hexa.py
